--- a/libstdc++-v3/src/Makefile.am
+++ b/libstdc++-v3/src/Makefile.am
@@ -139,22 +139,31 @@ else
 libstdc___la_SOURCES =
 endif
 
-# reexport does not need it included as a link.
-#	$(top_builddir)/libsupc++/libsupc++.la 
+# Support options for separate shared and external c++abi support libraries.
+if GLIBCXX_SEPARATE_ABI_LIB
+if GLIBCXX_CXXABI
+# Shim to support the external ABI lib
+abi_addition = $(top_builddir)/cxxabi/libc++abiconvenience.la
+else
+# Shared libsupc++ ABI lib
+abi_addition = $(top_builddir)/libsupc++/libsupc++.la 
+endif
+else
+# Monolithic libstdc++ including libsupc++.
+abi_addition = $(top_builddir)/libsupc++/libsupc++convenience.la
+endif
 
 libstdc___la_LIBADD = \
 	$(GLIBCXX_LIBS) \
-	$(top_builddir)/cxxabi/libc++abiconvenience.la \
+	$(abi_addition) \
 	$(top_builddir)/src/c++98/libc++98convenience.la \
 	$(top_builddir)/src/c++11/libc++11convenience.la \
 	$(top_builddir)/src/c++17/libc++17convenience.la \
 	$(top_builddir)/src/c++20/libc++20convenience.la
 
-#	$(top_builddir)/libsupc++/libsupc++.la 
-
 libstdc___la_DEPENDENCIES = \
 	${version_dep} \
-	$(top_builddir)/cxxabi/libc++abiconvenience.la \
+	$(abi_addition) \
 	$(top_builddir)/src/c++98/libc++98convenience.la \
 	$(top_builddir)/src/c++11/libc++11convenience.la \
 	$(top_builddir)/src/c++17/libc++17convenience.la \
