--- a/libstdc++-v3/src/Makefile.in
+++ b/libstdc++-v3/src/Makefile.in
@@ -401,6 +401,7 @@ build_os = @build_os@
 build_vendor = @build_vendor@
 builddir = @builddir@
 check_msgfmt = @check_msgfmt@
+cxx_abi_lib_subdir = @cxx_abi_lib_subdir@
 datadir = @datadir@
 datarootdir = @datarootdir@
 docdir = @docdir@
@@ -450,6 +451,7 @@ program_transform_name = @program_transform_name@
 psdir = @psdir@
 python_mod_dir = @python_mod_dir@
 sbindir = @sbindir@
+separate_gxx_abi_lib = @separate_gxx_abi_lib@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
@@ -555,22 +557,25 @@ cxx11_sources = \
 # that change, any compatibility sources can be added here.
 @GLIBCXX_HOSTED_FALSE@libstdc___la_SOURCES = 
 @GLIBCXX_HOSTED_TRUE@libstdc___la_SOURCES = $(cxx98_sources) $(cxx11_sources)
+# Shared libsupc++ ABI lib
+@GLIBCXX_CXXABI_FALSE@@GLIBCXX_SEPARATE_ABI_LIB_TRUE@abi_addition = $(top_builddir)/libsupc++/libsupc++.la 
 
-# reexport does not need it included as a link.
-#	$(top_builddir)/libsupc++/libsupc++.la 
+# Support options for separate shared and external c++abi support libraries.
+# Shim to support the external ABI lib
+@GLIBCXX_CXXABI_TRUE@@GLIBCXX_SEPARATE_ABI_LIB_TRUE@abi_addition = $(top_builddir)/cxxabi/libc++abiconvenience.la
+# Monolithic libstdc++ including libsupc++.
+@GLIBCXX_SEPARATE_ABI_LIB_FALSE@abi_addition = $(top_builddir)/libsupc++/libsupc++convenience.la
 libstdc___la_LIBADD = \
 	$(GLIBCXX_LIBS) \
-	$(top_builddir)/cxxabi/libc++abiconvenience.la \
+	$(abi_addition) \
 	$(top_builddir)/src/c++98/libc++98convenience.la \
 	$(top_builddir)/src/c++11/libc++11convenience.la \
 	$(top_builddir)/src/c++17/libc++17convenience.la \
 	$(top_builddir)/src/c++20/libc++20convenience.la
 
-
-#	$(top_builddir)/libsupc++/libsupc++.la 
 libstdc___la_DEPENDENCIES = \
 	${version_dep} \
-	$(top_builddir)/cxxabi/libc++abiconvenience.la \
+	$(abi_addition) \
 	$(top_builddir)/src/c++98/libc++98convenience.la \
 	$(top_builddir)/src/c++11/libc++11convenience.la \
 	$(top_builddir)/src/c++17/libc++17convenience.la \
