--- a/libstdc++-v3/include/Makefile.in
+++ b/libstdc++-v3/include/Makefile.in
@@ -1829,6 +1829,11 @@ stamp-host: ${host_headers} ${bits_host_headers} ${ext_host_headers} ${host_head
 @ENABLE_FLOAT128_FALSE@stamp-float128:
 @ENABLE_FLOAT128_FALSE@	echo 'undef _GLIBCXX_USE_FLOAT128' > stamp-float128
 
+@GLIBCXX_CXXABI_TRUE@stamp-libsupcxx:
+@GLIBCXX_CXXABI_TRUE@	echo 'undef _GLIBCXX_LIBSUPCXX' > stamp-libsupcxx
+@GLIBCXX_CXXABI_FALSE@stamp-libsupcxx:
+@GLIBCXX_CXXABI_FALSE@	echo 'define _GLIBCXX_LIBSUPCXX 1' > stamp-libsupcxx
+
 # This header is not installed, it's only used to build libstdc++ itself.
 ${host_builddir}/largefile-config.h: ${CONFIG_HEADER} stamp-${host_alias}
 	@rm -f $@.tmp
@@ -1850,7 +1855,8 @@ ${host_builddir}/c++config.h: ${CONFIG_HEADER} \
 			      stamp-dual-abi \
 			      stamp-cxx11-abi \
 			      stamp-allocator-new \
-			      stamp-float128
+			      stamp-float128 \
+			      stamp-libsupcxx
 	@date=`cat ${toplevel_srcdir}/gcc/DATESTAMP` ;\
 	release=`sed 's/^\([0-9]*\).*$$/\1/' ${toplevel_srcdir}/gcc/BASE-VER` ;\
 	ns_version=`cat stamp-namespace-version` ;\
@@ -1860,6 +1866,7 @@ ${host_builddir}/c++config.h: ${CONFIG_HEADER} \
 	cxx11abi=`cat stamp-cxx11-abi` ;\
 	allocatornew=`cat stamp-allocator-new` ;\
 	float128=`cat stamp-float128` ;\
+	libsupcxx=`cat stamp-libsupcxx` ;\
 	ldbl_compat='s,g,g,' ;\
 	grep "^[	 ]*#[	 ]*define[	 ][	 ]*_GLIBCXX_LONG_DOUBLE_COMPAT[	 ][	 ]*1[	 ]*$$" \
 	${CONFIG_HEADER} > /dev/null 2>&1 \
@@ -1883,6 +1890,7 @@ ${host_builddir}/c++config.h: ${CONFIG_HEADER} \
 	-e "s,define _GLIBCXX_USE_CXX11_ABI, define _GLIBCXX_USE_CXX11_ABI $$cxx11abi," \
 	-e "s,define _GLIBCXX_USE_ALLOCATOR_NEW, define _GLIBCXX_USE_ALLOCATOR_NEW $$allocatornew," \
 	-e "s,define _GLIBCXX_USE_FLOAT128,$$float128," \
+	-e "s,define _GLIBCXX_LIBSUPCXX,$$libsupcxx," \
 	-e "$$ldbl_compat" \
 	-e "$$ldbl_alt128_compat" \
 	-e "$$verbose_assert" \
