--- a/libstdc++-v3/configure.ac
+++ b/libstdc++-v3/configure.ac
@@ -143,6 +143,7 @@ if test "x${with_newlib}" != "xyes" &&
     test "x$with_headers" != "xno"; then
   AC_LIBTOOL_DLOPEN
 fi
+AM_PROG_AS
 AM_PROG_LIBTOOL
 ACX_LT_HOST_FLAGS
 AC_SUBST(enable_shared)
